<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnvolverAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:layout_marginTop="303dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:textStyle="bold"
            android:onClick="onButtonClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/descarga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLlamada"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="172dp"
            android:backgroundTint="@color/green"
            android:onClick="onButtonClick"
            android:text="@string/llamada"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.269"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnAlarm"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/red"
            android:onClick="onButtonClick"
            android:text="@string/alarma"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.269"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <Button
            android:id="@+id/btnUrl"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/black"
            android:onClick="onButtonClick"
            android:text="@string/url"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.734"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <Button
            android:id="@+id/btnGmail"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="172dp"
            android:backgroundTint="@color/orange"
            android:onClick="onButtonClick"
            android:text="@string/gmail"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.734"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="380dp"
            android:layout_marginBottom="700dp"
            android:text="@string/txt_version_app"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
