<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context=".ConfActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/logoconf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="Logo de Configuración" />

        <TextView
            android:id="@+id/txt_conf_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AJUSTES DE LA APLICACIÓN"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_main_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_conf_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/txt_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DATOS DE CONTACTO"
                    android:textColor="@color/darkblue"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingBottom="12dp" />

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/txt_phone"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:backgroundTint="@color/orange"
                    android:autofillHints="phone" />

                <EditText
                    android:id="@+id/edit_URL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_url"
                    android:inputType="textUri"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:backgroundTint="@color/orange"
                    android:autofillHints="url" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:id="@+id/txt_conf2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="AJUSTES DE JUEGOS Y VOZ"
                    android:textColor="@color/darkblue"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingBottom="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Número a Adivinar (3-18):"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/spinnerTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fecha:"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/datePickerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Seleccionar Fecha"
                    android:backgroundTint="@color/orange"
                    android:textColor="@color/white"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tiempo de Espera entre tiradas:"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroupTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <RadioButton
                        android:id="@+id/radioTime1"
                        android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                        android:text="1 seg" android:checked="true" android:layout_marginEnd="8dp"/>

                    <RadioButton
                        android:id="@+id/radioTime2"
                        android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                        android:text="2 seg" android:layout_marginEnd="8dp"/>

                    <RadioButton
                        android:id="@+id/radioTime3"
                        android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                        android:text="3 seg" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chistes"
                    android:layout_marginTop="12dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="CONTINUAR"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_main_config" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/txt_version_app"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_conf" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>